# ashpaper

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
ashpaper/: Cargo.toml
ashpaper-bin/poems/: lovely-poem.eso
ashpaper-bin/src/: main.rs
ashpaper/src/: error.rs  lib.rs  parser.rs  program.rs
poems/: cond-goto-test.eso  goto-test.eso  math-test.eso  stack-overflow-test.eso  stack-test.eso
src/: errors.rs  jit.rs  lib.rs  parser.rs  program.rs  rt.rs
