[package]
name = "ashpaper-plus"
description = "Rust Inpterpreter for Esopo language AshPaper conceived by William Hicks"
edition = "2018"

authors = [
    "Benjamin Hinchliff <benjamin.hinchliff@gmail.com>",
    "Shea Newton <shnewto@gmail.com>",
    "@CrockAgile",
]

version = "0.5.1"
license = "MIT"

homepage = "https://github.com/BenjaminHinchliff/ashpaper"
repository = "https://github.com/BenjaminHinchliff/ashpaper.git"
documentation = "https://docs.rs/ashpaper-plus"
readme = "README.md"

keywords = ["esolang", "esopo", "poetry", "interpreter"]

[[bin]]
name = "ashpaper-plus"
required-features = ["cli"]

[features]
cli = ["clap", "env_logger"]
jit = ["cranelift", "cranelift-module", "cranelift-jit", "itertools"]

[dependencies]
log = "0.4"
regex = "1.4.3"
lazy_static = "1.4.0"
cmudict-fast = "0.8.0"
thiserror = "1.0.24"
clap = { version = "2.33.3", optional = true }
env_logger = { version = "0.8.3", optional = true }
cranelift = { version = "0.71.0", optional = true }
cranelift-module = { version = "0.71.0", optional = true }
cranelift-jit = { version = "0.71.0", optional = true }
itertools = { version = "0.10.0", optional = true }

[dev-dependencies]
pretty_assertions = "0.6.1"
